# Solana-Lottery-Program

./: Cargo.toml  README.md
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  program.rs  state.rs  types.rs
tests/: test.rs
