[package]
name = "sol_lottery"
version = "0.1.0"
edition = "2021"
authors = [ "PooriaGG" ]
description = "Solana's first on-chain lottery program. Powered by Pyth"
license = "GPL-v3"

[features]
no-entrypoint = []
test-sbf = []
onchain_authority = []
testing_authority = []

[dependencies]
solana-program = "=1.17.3"
spl-token = "4.0.0"
thiserror = "1.0.52"
borsh = ">=0.9, <0.11"
pyth-solana-receiver-sdk = "0.3.1"
spl-associated-token-account = { version = "2.0.0", features = [ "no-entrypoint" ] }
num-derive = "0.4.2"
num-traits = "0.2.19"

[dev-dependencies]
solana-program-test = "=1.17.3"
solana-sdk = "=1.17.3"

[lib]
name = "sol_lottery"
crate-type = [ "cdylib", "lib" ]
